# HE_experiments

./: .gitignore  CMakeLists.txt
src/: FrontClass.idl  front_class.cpp  front_class.hpp
src/lib/Core/: Face.cpp  Face.hpp  Geometry.cpp  Geometry.hpp  Halfedge.cpp  Halfedge.hpp  HalfedgeDS.cpp  HalfedgeDS.hpp  Struct.hpp  Vertex.cpp  Vertex.hpp
src/lib/CreateOperations/: createOperations.hpp  cubeCreater.cpp  tubeCreater.cpp
src/lib/DrawSupport/: drawHalfEdges.cpp  drawSupport.hpp  triangulateCentralPoint.cpp
src/lib/Intersection/: TriangleMeshAABB.cpp  TriangleMeshAABB.hpp  intersections.hpp
src/lib/Modificators/: Modificators.hpp  catmullClark.cpp  extrudeFace.cpp  quadSubDivide.cpp  triangleSunDivide.cpp
src/lib/Operations/: Operations.hpp  addEdge.cpp  addFace.cpp  addVertex.cpp  createOperations.hpp  cubeCreater.cpp  cutFace.cpp  planeCreater.cpp  removeEdge.cpp  removeFace.cpp  removeVertex.cpp  setFromGeometry.cpp  splitEdge.cpp  testFunctions.cpp
src/lib/RenderLines/: RenderLines.hpp  SurfSpriteRender.hpp  renderSilhouetteLines.cpp  supportRenderLines.cpp  surfAgent.cpp  surfAgent.hpp  surfRender.cpp  surfSupportFunctions.cpp  surfSupportFunctions.hpp  triangeFrame.hpp
src/lib/Scene/: Scene.hpp  camera.cpp  createHalfEdgeDS.cpp  scene.cpp
